--- a/src/assets/scss/core/base/_typography.scss
+++ b/src/assets/scss/core/base/_typography.scss
@@ -49,6 +49,10 @@ h4,
 h5,
 .h5 {
 	@include font-size(base);
+
+	& + p {
+		margin-top: -20px;
+	}
 }
 
 h6,
@@ -87,7 +91,7 @@ a {
 	&.func-link {
 		@include anchor-aspect(func-link);
 		@include font-weight(func-link);
-		text-transform: $link-func--transform;		
+		text-transform: $link-func--transform;
 	}
 }
 
@@ -214,7 +218,7 @@ strong {
 
 		&.func-link {
 			@include anchor-aspect(func-link, inverse);
-		}		
+		}
 	}
 
 	h1, h2, h3, h4, h5, h6,
@@ -248,11 +252,11 @@ strong {
 	.h4-mobile {
 		@include font-size(h4);
 	}
-	
+
 	.h5-mobile {
 		@include font-size(base);
 	}
-	
+
 	.h6-mobile {
 		@include font-size(sm);
 	}
@@ -282,13 +286,13 @@ strong {
 	h4,
 	.h4 {
 		@include font-size(h4-desktop);
-	}	
+	}
 
 	h5,
 	.h5 {
 		@include font-size(base-desktop);
 	}
-	
+
 	h6,
 	.h6,
 	small,
