--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
 	position: absolute !important;
-	top: 0;
+	top: 32px;
 	width: 100%;
 	z-index: 10 !important;
 	background: color-bg(header);
@@ -86,6 +86,10 @@
 }
 
 @include media( '<=medium' ) {
+
+	.site-header {
+		top: 16px;
+	}
 
 	.header-nav-toggle {
 		display: block;
