fixed hash routing

--- a/src/assets/scss/core/elements/_buttons.scss
+++ b/src/assets/scss/core/elements/_buttons.scss
@@ -19,6 +19,10 @@
     white-space: nowrap;
 	transition: background .15s ease;
 
+	&:focus {
+		outline: none;
+	}
+
     &:active {
         outline: 0;
     }
