--- a/src/assets/scss/theme/sections/_pricing.scss
+++ b/src/assets/scss/theme/sections/_pricing.scss
@@ -86,6 +86,7 @@ ul.pricing-item-features-list {
 		margin-bottom: 0;
 		padding: 14px 0;
 		@include divider(before);
+		opacity: 0.5;
 
 		&::after {
 			content: '';
@@ -98,6 +99,7 @@ ul.pricing-item-features-list {
 		}
 
 		&.is-checked {
+			opacity: 1;
 
 			&::after {
 				background-image: inline-svg('<svg width="16" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M5.6 6.4L1.6 4 0 5.6 5.6 12 16 1.6 14.4 0z" fill="' + get-color(alert, success) + '" fill-rule="nonzero"/></svg>');
