added press page with file downloads; added fb & twitter meta tags

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -148,6 +148,11 @@
 @import "core/sections/cta";
 
 /*--------------------------------------------------------------
+# Press
+--------------------------------------------------------------*/
+@import "core/sections/press";
+
+/*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
 @import "core/sections/clients";
