cleaned up unused code; embedded 2 more forms

--- a/src/assets/scss/core/base/_typography.scss
+++ b/src/assets/scss/core/base/_typography.scss
@@ -77,7 +77,7 @@ figcaption {
 
 a {
 
-	&:not(.button) {
+	&:not(.button), &.button-plain {
 		@include anchor-aspect(main);
 		@include font-weight(link);
 	}
@@ -208,7 +208,7 @@ strong {
 
 	a {
 
-		&:not(.button) {
+		&:not(.button), &.button-plain {
 			@include anchor-aspect(main, inverse);
 		}
 
